# itsm-ai-automation

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: seed_data.py
src/ai/: llm_client.py  prompts.py
src/config/: settings.py
src/connectors/: base.py  freshservice.py  zendesk.py
src/core/: logger.py  security.py
src/models/: ticket.py
src/services/: orchestrator.py  processor.py
src/workers/: ticket_worker.py
tests/: test_ai.py  test_connectors.py  test_security.py  test_settings.py  test_ticket.py
