[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "itsm-ai-automation"
version = "0.1.0"
description = "Automatización e Integración de IA para ITSM"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "rq>=2.0",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.5"]

[project.scripts]
itsm-worker = "src.workers.ticket_worker:main"
itsm-process = "src.services.orchestrator:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
